# ovmf-prebuilt

./: .gitignore  Cargo.toml  Dockerfile  License.txt  OVMF-pure-efi.fd  README.md
.github/: renovate.json
.github/workflows/: build_tag.yml  ci.yml  create_release.yml  release.yaml
build-edk2/: Cargo.toml  Dockerfile
build-edk2/src/: main.rs
ovmf-prebuilt/: Cargo.toml  LICENSE-MIT  README.md
ovmf-prebuilt/src/: error.rs  fetch.rs  lib.rs  source_constants.rs
src/: lib.rs  main.rs
xtask/: Cargo.toml  Dockerfile
xtask/src/: github.rs  main.rs  update_sources.rs
