[package]
name = "ovmf-prebuilt"
version = "0.2.7"
edition.workspace = true
categories = ["development-tools"]
keywords = ["edk2", "firmware", "ovmf", "prebuilt"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-osdev/ovmf-prebuilt"
description = "Library to download and cache OVMF prebuilt binaries"

[dependencies]
log = "0.4"
lzma-rs = "0.3"
sha2 = "0.10"
tar = "0.4"

[dependencies.ureq]
version = "3.0"
default-features = false
features = ["rustls"]
